# Zavrsni-MravljiAlgGIT

./: CMakeLists.txt  results.csv  solutionLogs-oldLoggingSystem.rar
AntRoot/: run.bat
AntRoot/configs/: 2.cfg
extras/: TODO.txt  modelParameters.cfg  modelParameters.conf  notes.txt  primjer2var.txt  truthTableTemplates.txt
headers/: Ant.h  FormulaParsing.h  Graph.h  outputControll.h  paramSetup.h  parameters.h
solutionLogs/: N2M3I100-1.txt  N2M3I100-2.txt  N2M3I100-3.txt  N2M3I100-4.txt  N2M3I100-5.txt  N2M3I100-6.txt  N2M3I100-7.txt  N2M3I100-8.txt  N2M3I6-1.txt  N2M3I6-10.txt  N2M3I6-11.txt  N2M3I6-12.txt  N2M3I6-13.txt  N2M3I6-14.txt  N2M3I6-2.txt  N2M3I6-3.txt  N2M3I6-4.txt  N2M3I6-5.txt  N2M3I6-6.txt  N2M3I6-7.txt  N2M3I6-8.txt  N2M3I6-9.txt  N6M10000I100-1.txt  N6M10000I100-2.txt  N6M10000I100-3.txt  N6M10000I50-1.txt  N6M10000I50-2.txt  N6M10000I50-3.txt  N6M10000I50-4.txt  N6M10000I50-5.txt  N6M10000I50-6.txt  N6M10000I50-7.txt  N6M15000I30-1.txt  N6M20000I100-1.txt  N6M20000I100-2.txt  N6M20000I100-3.txt  N6M2000I100-1.txt  N6M2000I100-2.txt  N6M2000I100-3.txt  N6M2000I300-1.txt  (+24 more)
sources/: Ant.cpp  FormulaDuplicateFinder.cpp  FormulaParsing.cpp  Graph.cpp  main.cpp  outputControll.cpp  paramSetup.cpp  test.cpp
